--- a/index.html
+++ b/index.html
@@ -105,12 +105,18 @@
         </div>
       </div>
     </div>
-    <audio autoplay loop hidden>
+    <audio id="myAudio" loop>
       <source
         src="./DieuVoTriNhat-KaiDinhMINHoangDung-15142342.mp3"
         type="audio/mpeg" />
       Trình duyệt của bạn không hỗ trợ thẻ audio.
     </audio>
+    <script>
+      document.addEventListener("click", function () {
+        var audio = document.getElementById("myAudio");
+        audio.play();
+      });
+    </script>
   </body>
   <script>
     document.addEventListener("mousemove", function (e) {
